--- a/src/src/client/views/index.html
+++ b/src/src/client/views/index.html
@@ -24,13 +24,17 @@
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                    <input id="name" type="text" name="input" value="" placeholder="Name">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="user-text"></div>
+                <div id="polarity"></div>
+                <div id="subjectivity"></div>
+                <div id="polarity-confidence"></div>
+                <div id="subjectivity-confidence"></div>
             </section>
         </main>
 
@@ -39,5 +43,5 @@
         </footer>
 
     </body>
-    
+
 </html>
