--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,14 +23,18 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                <form class="" onsubmit="return Client.onSubmit(event)">
+                    <input id="name" type="text" name="input" value="" placeholder="Name">
+                    <input type="submit" name="" value="submit" onclick="return Client.onSubmit(event)" onsubmit="return Client.onSubmit(event)">
                 </form>
             <section>
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="user-text"></div>
+                <div id="polarity"></div>
+                <div id="subjectivity"></div>
+                <div id="polarity-confidence"></div>
+                <div id="subjectivity-confidence"></div>
             </section>
         </main>
 
@@ -39,5 +43,15 @@
         </footer>
 
     </body>
-    
+
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
+
 </html>
